<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <ListPreference
        android:defaultValue="@string/sort_default"
        android:entries="@array/sort_order_options"
        android:entryValues="@array/sort_order_values"
        android:key="@string/sort_key"
        android:title="@string/sort_title" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

    <Preference
        android:defaultValue="false"
        android:key="@string/requery_data_key" />


</PreferenceScreen>
